<resources>
    <string name="app_name">SpotifyWrapped</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">LoginPage</string>

    <!--Login Info-->
    <string name="login_page_title">Login Page</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Log In</string>

    <!--Update Login Info-->
    <string name="update_login_title">Update Login Info</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_login_button">Confirm Updates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_login_info_title">Update Login Info</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="login_email">Email</string>
    <string name="title_createaccount">Sign Up</string>
    <string name="title_settings">Settings</string>
    <string name="preference_file_key">WrappedData</string>
    <string name="title_updatelogin">Update Login</string>
    <string name="new_email">New Email</string>
</resources>
