<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.spotifywrapped.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.spotifywrapped.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.spotifywrapped.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_createaccount"
        android:name="com.example.spotifywrapped.ui.createaccount.CreateAccountFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_createaccount" />

    <fragment
        android:id="@+id/navigation_updatelogin"
        android:name="com.example.spotifywrapped.ui.updatelogin.UpdateLoginFragment"
        android:label="@string/title_updatelogin"
        tools:layout="@layout/fragment_update_login" />

</navigation>